--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  
     <style>
         body {
           font-family: Arial, Helvetica, sans-serif;
@@ -70,7 +71,7 @@
 			</td>
 
 			<td>
-				<input type=”text”  placeholder=”Name” name=”name”>
+				<input type=”text”  placeholder=”Name” name=”customername”>
 			</td>
 		</tr>
 <tr>
@@ -81,7 +82,7 @@
         </td>
 
         <td>
-            <input type=”number”  placeholder=”Phone” name=”phone number”>
+            <input type=”number”  placeholder=”Phone” name=”phonenumber”>
         </td>
     </tr>
 <tr>
@@ -105,7 +106,52 @@
 			</td>
 		</tr>
 	</table>
-    <button type="submit" class="registerbtn"><strong>Register</strong></button>
+    <button type="submit" onsubmit="return validateform()"class="registerbtn"><strong>Register</strong></button>
+    <script>   
+      function getData()
+    {
+        //gettting the values
+        var email = document.getElementById("email").value;
+        var password= document.getElementById("password").value; 
+        var phone= document.getElementById("phonenumber").value; 
+        var Name= document.getElementById("customername").value; 
+        //saving the values in local storage
+        localStorage.setItem("txtValue", email);
+        localStorage.setItem("txtValue1", password);
+        localStorage.setItem("txtValue2", phone);
+        localStorage.setItem("txtValue3", Name);   
+    }
+    </script>
+    <script>  
+      function validateform(){  
+        let valid   = true
+        
+      element = document.getElementById("customername")
+      element = document.getElementById("password")
+      element = document.getElementById("email")
+
+if( ! element.value.toLowerCase().match('[a-z0-9]+@[a-z]+\.[a-z]+')) {
+  alert("Use valid email");
+    valid = false
+}
+      if (element==null || element==""){  
+        alert("Name can't be blank");
+        valid   = false
+        return false;  
+      }else if(element.length<6){  
+        alert("Password must be at least 6 characters long.");
+        valid  = false
+        return false;  
+        } 
+        if(valid) {
+          getData()
+        window.location.href = 'customerdata.html'
+    }
+        
+      }  
+
+
+      </script>  
 </form> 
 </body>
 </html>
